--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-1. npm install
+`1. npm install`
 
-2. node index.js
+`2. export PVU_JWT=<PVU_JWT>`
+(get token from Network tab)
+
+`3. node index.js`
